--- a/apps/templates/home/event-travel.html
+++ b/apps/templates/home/event-travel.html
@@ -50,12 +50,12 @@
                                                             <input type="text" name="activity" value="event_travel" hidden>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputLocation">Type of Event</label>
-                                                                <input type="text" name="event_type" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
+                                                                <input type="text" name="event_type" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location" required>
 
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">Pickup Location</label>
-                                                                <input type="text" name="location" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                                <input type="text" name="location" class="form-control" id="inputDestination" placeholder="Enter Destination" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">County of Destination</label>
@@ -70,29 +70,29 @@
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">Constituency</label>
-                                                                <input type="text" name="constituency" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                                <input type="text" name="constituency" class="form-control" id="inputDestination" placeholder="Enter Destination" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">Town</label>
-                                                                <input type="text" name="town" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                                <input type="text" name="town" class="form-control" id="inputDestination" placeholder="Enter Destination" required>
                                                             </div>
 
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputNoSeats">Number of Passengers</label>
-                                                                <input type="number" name="matatu" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats">
+                                                                <input type="number" name="matatu" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats" required>
                                                             
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTravelDate">Date of Travel</label>
-                                                                <input type="date" name="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel">
+                                                                <input type="date" name="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTime">Time of Travel</label>
-                                                                <input type="time" name="time" class="form-control" id="inputTime" placeholder="Time of Travel">
+                                                                <input type="time" name="time" class="form-control" id="inputTime" placeholder="Time of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="amount">Amount</label>
-                                                                <input type="number" name="amount" class="form-control" id="amount" readonly>
+                                                                <input type="number" name="amount" class="form-control" id="amount" readonly required>
                                                             </div>
 
                         
