--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
         <div class="navbar-brand header-logo">
             <a href="/" class="b-brand">
                 <div class="b-bg">
-                    <i class="feather icon-trending-up"></i>
+                    <img src="{{ url_for('static',filename='assets/images/mat.jpg') }}" width="40px" height="40px" style="border-radius: 5px;" alt="">
                 </div>
                 <span class="b-title">Travel Bila Was</span>
             </a>
@@ -26,9 +26,9 @@
                         <span class="pcoded-micon"><i class="feather icon-user"></i></span>
                             <span class="pcoded-mtext">Profile Page</span></a>
                 </li>                
-                <li class="nav-item pcoded-menu-caption">
+                <!-- <li class="nav-item pcoded-menu-caption">
                     <label>components</label>
-                </li>
+                </li> -->
                 <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds"
                     class="nav-item pcoded-hasmenu ">
                     <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
@@ -40,18 +40,18 @@
                         <li class=""><a href="/parcel-transport.html" class="">Parcel Travel</a></li>
                     </ul>
                 </li>
-                <li class="nav-item pcoded-menu-caption">
+                <!-- <li class="nav-item pcoded-menu-caption">
                     <label>Reports</label>
-                </li>
+                </li> -->
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'tbl_bootstrap' in segment %} active {% endif %}">
                     <a href="/tbl_bootstrap.html" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
                 </li>
-                <li class="nav-item pcoded-menu-caption">
+                <!-- <li class="nav-item pcoded-menu-caption">
                     <label>Pages</label>
-                </li>
+                </li> -->
                 <li data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe"
                     class="nav-item pcoded-hasmenu">
                     <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span
@@ -63,7 +63,7 @@
                 </li>
 
                 <li data-username="Sample Page" class="nav-item"><a href="/page-blank.html" class="nav-link"><span
-                        class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample page</span></a>
+                        class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Explore</span></a>
                 </li>
 
                 <li data-username="Disabled Menu" class="nav-item">
