--- a/apps/templates/home/student-travel.html
+++ b/apps/templates/home/student-travel.html
@@ -50,29 +50,37 @@
                                                             <input type="text" name="activity" value="student_travel" hidden>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputLocation">Pick Up Location</label>
-                                                                <input type="text" name="location" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
+                                                                <input type="text" name="location" class="form-control" id="inputLocation" aria-describedby="locationHelp" required placeholder="Enter Pick Up Location">
 
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">Destination</label>
-                                                                <input type="text" name="destination" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                                <select class="form-control" name="destination" id="inputDestination" placeholder="Enter Destination" value="{{ destination }}"
+                                                                    style="border: 2px solid #555;" required>
+                                                                    <option selected>{{ destination }}</option>
+                                                                    <option value="Nairobi">Nairobi</option>
+                                                                    <option value="Eldoret">Eldoret</option>
+                                                                    <option value="Nakuru">Nakuru</option>
+                                                                    <option value="Nyeri">Nyeri</option>
+                                                                    <option value="Nyahururu">Nyahururu</option>
+                                                                </select>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputNoSeats">Number of Seats</label>
-                                                                <input type="number" name="seats" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats">
+                                                                <input type="number" name="seats" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats" required>
                                                             
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTravelDate">Date of Travel</label>
-                                                                <input type="date" name="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel">
+                                                                <input type="date" name="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTime">Time of Travel</label>
-                                                                <input type="time" name="time" class="form-control" id="inputTime" placeholder="Time of Travel">
+                                                                <input type="time" name="time" class="form-control" id="inputTime" placeholder="Time of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="amount">Amount</label>
-                                                                <input type="number" name="amount" class="form-control" id="amount">
+                                                                <input type="number" name="amount" class="form-control" id="amount" required>
                                                             </div>
 
                         
@@ -96,6 +104,40 @@
         </div>
     </div>
     <!-- [ Main Content ] end -->
+
+    <script>
+        function updateAmount() {
+            const selectElement = document.querySelector('select[name="destination"]');
+            const destination = selectElement.value;
+            const seatsElement = document.querySelector('input[name="seats"]');
+            const seats = parseInt(seatsElement.value);
+    
+            const countyAmounts = {
+                'Nairobi': 800,
+                'Eldoret': 1000,
+                'Nakuru': 900,
+                'Nyeri': 950,
+                'Nyahururu': 850,
+            };
+    
+            let amount = '';
+            if (destination in countyAmounts) {
+                const baseAmount = countyAmounts[destination];
+                amount = baseAmount.toString();
+                if (seats && seats > 1) {
+                    amount = (baseAmount * seats).toString();
+                }
+            }
+    
+            const amountElement = document.querySelector('input[name="amount"]');
+            amountElement.value = amount;
+        }
+    
+        document.querySelector('select[name="destination"]').addEventListener('change', updateAmount);
+        document.querySelector('input[name="seats"]').addEventListener('input', updateAmount);
+    
+        updateAmount();
+    </script>
 
 {% endblock content %}
 
