--- a/apps/templates/home/page-blank.html
+++ b/apps/templates/home/page-blank.html
@@ -41,7 +41,8 @@
                                         <div class="card-block">
                                             <p>Enhance your journey with our hassle-free matatu ticket booking services.
                                             </p>
-                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                            <a href="/solo" class="btn btn-primary">Explore</a>
+                                            <!-- <button type="submit" class="btn btn-primary">Explore</button> -->
                                         </div>
                                     </div>
                                 </div>
@@ -53,7 +54,7 @@
                                         <div class="card-block">
                                             <p>Elevate your special occasions, whether it's weddings, dowry ceremonies, or burials, by booking our matatus.
                                             </p>
-                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                            <a href="/event" class="btn btn-primary">Explore</a>
                                         </div>
                                     </div>
                                 </div>
@@ -65,7 +66,7 @@
                                         <div class="card-block">
                                             <p>Discover cost-effective and convenient matatu services customized for students and organizations.
                                             </p>
-                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                            <a href="/Institution" class="btn btn-primary">Explore</a>
                                         </div>
                                     </div>
                                 </div>
@@ -77,7 +78,7 @@
                                         <div class="card-block">
                                             <p>Reliably send your parcels with speed and security through our efficient service.
                                             </p>
-                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                            <a href="/Parcel" class="btn btn-primary">Explore</a>
                                         </div>
                                     </div>
                                 </div>
