--- a/apps/templates/home/pay.html
+++ b/apps/templates/home/pay.html
@@ -24,7 +24,7 @@
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Bookings</a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:">Parcel Transportation</a></li>
+                                        <li class="breadcrumb-item"><a href="javascript:">Transaction</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -38,44 +38,36 @@
                                 <div class="col-sm-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5>Parcel Transport Booking Form</h5>
+                                            <h5>Payment Form</h5>
                                         </div>
                                         <div class="card-body">
-                                            <h5>Deliver your parcel with us here!</h5>
-                                            <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <form action="/Parcel" method="POST" enctype="multipart/form-data">
+                                                    <form  method="POST">
                                                         <div class="row">
                                                             <input type="text" name="activity" value="Parcel_transport" hidden>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputLocation">Pick Up Location</label>
-                                                                <input type="text" name="location" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location" required>
-
+                                                                <label for="inputLocation"><strong>Username</strong></label>
+                                                                <input type="text" name="username" value="{{record.username}}" class="form-control" id="" readonly>
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputDestination">Destination</label>
-                                                                <select class="form-control" name="destination" id="inputDestination" placeholder="Enter Destination" required>
-                                                                    <option selected>{{destination}}</option>
-                                                                    <option value="Nairobi">Nairobi</option>
-                                                                    <option value="Eldoret">Eldoret</option>
-                                                                    <option value="Nakuru">Nakuru</option>
-                                                                    <option value="Nyeri">Nyeri</option>
-                                                                    <option value="Nyahururu">Nyahururu</option>
-                                                                </select>
+                                                                <label for="inputLocation"><strong>Email</strong></label>
+                                                                <input type="email" name="email" value="{{current_user.email}}" class="form-control" id="" readonly>
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputNoSeats">Parcel Photo</label>
-                                                                <input type="file" name="photo" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats" required>
+                                                                <label for="inputLocation"><strong>Amount</strong></label>
+                                                                <input type="text" name="amount" value="{{record.Amount}}" class="form-control" id="" readonly>
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="amount">Amount</label>
-                                                                <input type="number" name="amount" class="form-control" id="amount" readonly>
+                                                                <label for="inputLocation"><strong>Phone</strong></label>
+                                                                {% if data %}
+                                                                <input type="text" name="phone" maxlength="12" value="{{data.phone}}" class="form-control" id="">
+                                                                {% else %}
+                                                                <input type="text" name="phone" maxlength="12" placeholder="254725602805" class="form-control" id="">
+                                                                {% endif %}
                                                             </div>
-
-                        
                                                         </div>
-                                                        <button type="submit" class="btn btn-primary">Book Now</button>
+                                                        <button type="submit" class="btn btn-primary">Pay Now</button>
                                                     </form>
                                                 </div>
                                                 
@@ -95,23 +87,6 @@
     </div>
     <!-- [ Main Content ] end -->
 
-    <script>
-        function updateAmount() {
-            const selectElement = document.querySelector('select[name="destination"]');
-            const destination = selectElement.value;
-            let amount = '';
-            if (destination) {
-                amount = '600';
-            }
-            const amountElement = document.querySelector('input[name="amount"]');
-            amountElement.value = amount;
-        }
-    
-      
-        document.querySelector('select[name="destination"]').addEventListener('change', updateAmount);
-    
-        updateAmount();
-    </script>
 
 {% endblock content %}
 
