--- a/apps/templates/home/profile.html
+++ b/apps/templates/home/profile.html
@@ -23,7 +23,7 @@
                                             <h5>Edit Info</h5>
                                         </div>
                                         <div class="card-block">
-                                            <form action="/profile.html"  method="POST" enctype="multipart/form-data">
+                                            <form action="/profile"  method="POST" enctype="multipart/form-data">
                                             <div class="row">
                                                 <div class="col-sm-6 mb-4">
                                                     <div class="form-group">
