--- a/apps/templates/home/parcel-transport.html
+++ b/apps/templates/home/parcel-transport.html
@@ -45,7 +45,7 @@
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <form action="/Parcel" method="POST" enctype="multipart/form-data">
+                                                    <form action="/parcelservice" method="POST" enctype="multipart/form-data">
                                                         <div class="row">
                                                             <input type="text" name="activity" value="Parcel_transport" hidden>
                                                             <div class="form-group col-md-6">
