--- a/apps/templates/home/solo-travel.html
+++ b/apps/templates/home/solo-travel.html
@@ -45,7 +45,7 @@
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <form action="/solo" method="POST">
+                                                    <form action="/soloservice" method="POST">
                                                         <div class="row">
                                                                 <input type="text" name="activity" value="Trip_travel" hidden class="form-control" id="inputLocation" aria-describedby="locationHelp" required placeholder="Enter Pick Up Location">
                                                             <div class="form-group col-md-6">
