--- a/apps/templates/home/student-travel.html
+++ b/apps/templates/home/student-travel.html
@@ -45,7 +45,7 @@
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <form action="/Institution" method="POST">
+                                                    <form action="/institutionservice" method="POST">
                                                         <div class="row">
                                                             <input type="text" name="activity" value="student_travel" hidden>
                                                             <div class="form-group col-md-6">
