--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -6,7 +6,7 @@
                 <div class="b-bg">
                     <img src="{{ url_for('static',filename='assets/images/mat.jpg') }}" width="40px" height="40px" style="border-radius: 5px;" alt="">
                 </div>
-                <span class="b-title">Travel Bila Was</span>
+                <span class="b-title"><strong>Travel Bila Was</strong></span>
             </a>
             <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
         </div>
