--- a/apps/templates/home/reset.html
+++ b/apps/templates/home/reset.html
@@ -15,51 +15,35 @@
             <div class="card">
                 <div class="card-body text-center">
 
-                    <h3 class="mb-4">Login</h3>
+                    <h3 class="mb-4">Password-Reset</h3>
 
                     <span class="mb-0 text-muted">
                         {% if msg %}
                             <span class="text-danger">{{ msg | safe }}</span>
                         {% elif success %}
-                        
+                            <span class="text-success">{{ success | safe }}</span>
                         {% else %}
-                            Add your credentials
+                            Add your email
                         {% endif %} 
-
-                        {% with messages=get_flashed_messages(with_categories=True) %}
-                        {% if messages %}
-                        {% for category,msg in messages %}
-                        
-                        <span class="text-danger">{{ msg | safe }}</span>
-                    
-                        {% endfor %}
-                        {% endif %}
-                        {% endwith %}
-
-
                     </span>
 
                     <br />
                     <br />
 
                     <form role="form" method="post" action="">
-
-                        {{ form.hidden_tag() }}                    
-
-                        <div class="input-group mb-3">
-                            {{ form.username(placeholder="Username or eMail", class="form-control") }}
+                        <div class="form-group col-md-12">
+                            <input type="password" name="password"  class="form-control" id="passwordInput" placeholder="Enter new password">
                         </div>
-                        
-                        <div class="input-group mb-4">
-                            {{ form.password(placeholder="Password", class="form-control", type="password") }}
+                        <div class="form-group col-md-12">
+                            <input type="password" name="confirm"  class="form-control" id="confirmPasswordInput" placeholder="Confirm password">
                         </div>
-                        
-                        <button type="submit" name="login" class="btn btn-primary shadow-2 mb-4">Login</button>
+                        <input type="checkbox" style="width: 20px; height: 20px;" id="showPasswordCheckbox" />show password
+                        <br>
+                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Reset-Password</button>
 
                     </form>
 
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="{{ url_for('authentication_blueprint.register') }}" >Sign UP</a></p>
-                    <p class="mb-0 text-muted">Forgot your password? <a style="font-weight: bolder;" href="{{ url_for('authentication_blueprint.forgot') }}" ><strong>Click here</strong></a></p>
+                    <p class="mb-0 text-muted">Already have an account? <a href="{{ url_for('authentication_blueprint.login') }}" >Login</a></p>
                     
                     {% if config.SOCIAL_AUTH_GITHUB %}
                         <div class="mx-2">
@@ -76,5 +60,21 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const showPasswordCheckbox = document.getElementById('showPasswordCheckbox');
+        const passwordInput = document.getElementById('passwordInput');
+        const confirmPasswordInput = document.getElementById('confirmPasswordInput');
+        
+        showPasswordCheckbox.addEventListener('change', function () {
+          if (showPasswordCheckbox.checked) {
+            passwordInput.type = 'text';
+            confirmPasswordInput.type = 'text';
+          } else {
+            passwordInput.type = 'password';
+            confirmPasswordInput.type = 'password';
+          }
+        });
+        </script>
 
 {% endblock content %}
